// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-dialog component should render 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog heading" hide-default-controls="true">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon-tertiary" data-gets-focus exportparts="button">
          <template shadowrootmode="open">
            <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-0" label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-0">
              <button aria-describedby="ic-tooltip-ic-button-with-tooltip-0" aria-label="Dismiss" class="button" part="button" tabindex="0" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </template>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
</ic-dialog>
`;

exports[`ic-dialog component should render as large size 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog heading" hide-default-controls="true" size="large">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog large">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon-tertiary" data-gets-focus exportparts="button">
          <template shadowrootmode="open">
            <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-14" label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-14">
              <button aria-describedby="ic-tooltip-ic-button-with-tooltip-14" aria-label="Dismiss" class="button" part="button" tabindex="0" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </template>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
</ic-dialog>
`;

exports[`ic-dialog component should render as large size and disableWidthConstraint is set 1`] = `
<ic-dialog class="ic-dialog-hidden" disable-width-constraint="true" heading="Dialog heading" hide-default-controls="true" size="large">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog disable-width-constraint large">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon-tertiary" data-gets-focus exportparts="button">
          <template shadowrootmode="open">
            <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-154" label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-154">
              <button aria-describedby="ic-tooltip-ic-button-with-tooltip-154" aria-label="Dismiss" class="button" part="button" tabindex="0" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </template>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
</ic-dialog>
`;

exports[`ic-dialog component should render as medium size 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog heading" hide-default-controls="true" size="medium">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog medium">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon-tertiary" data-gets-focus exportparts="button">
          <template shadowrootmode="open">
            <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-12" label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-12">
              <button aria-describedby="ic-tooltip-ic-button-with-tooltip-12" aria-label="Dismiss" class="button" part="button" tabindex="0" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </template>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
</ic-dialog>
`;

exports[`ic-dialog component should render with a label 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog heading" hide-default-controls="true" label="Dialog label">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label">
                Dialog label
              </ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon-tertiary" data-gets-focus exportparts="button">
          <template shadowrootmode="open">
            <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-2" label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-2">
              <button aria-describedby="ic-tooltip-ic-button-with-tooltip-2" aria-label="Dismiss" class="button" part="button" tabindex="0" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </template>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
</ic-dialog>
`;

exports[`ic-dialog component should render with no buttons 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog heading" hide-default-controls="true">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button aria-label="Dismiss" class="close-icon" data-gets-focus variant="icon-tertiary">
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
    </dialog>
  </template>
  Dialog content
</ic-dialog>
`;

exports[`ic-dialog component should render with slotted content 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog heading">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon-tertiary" exportparts="button">
          <template shadowrootmode="open">
            <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-6" label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-6">
              <button aria-describedby="ic-tooltip-ic-button-with-tooltip-6" aria-label="Dismiss" class="button" part="button" tabindex="0" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </template>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
          <template shadowrootmode="open">
            <button class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </template>
          Cancel
        </ic-button>
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button">
          <template shadowrootmode="open">
            <button class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </template>
          Confirm
        </ic-button>
      </div>
    </dialog>
  </template>
  <ic-text-field data-gets-focus label="What is your favourite coffee?" value="">
    <template shadowrootmode="open">
      <ic-input-container>
        <ic-input-label for="ic-text-field-input-0" helpertext="" label="What is your favourite coffee?">
          <slot name="helper-text" slot="helper-text"></slot>
        </ic-input-label>
        <ic-input-component-container size="medium" validationstatus="">
          <input aria-describedby="" aria-invalid="false" aria-label="What is your favourite coffee?" autocapitalize="off" autocomplete="off" id="ic-text-field-input-0" inputmode="text" name="ic-text-field-input-0" placeholder="" type="text" value="">
        </ic-input-component-container>
        <ic-input-validation arialivemode="polite" for="ic-text-field-input-0" message="" status=""></ic-input-validation>
      </ic-input-container>
    </template>
    <input class="ic-input" name="ic-text-field-input-0" type="hidden" value="">
  </ic-text-field>
  <ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button">
    <template shadowrootmode="open">
      <button class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </template>
    Click Me
  </ic-button>
</ic-dialog>
`;

exports[`ic-dialog component should render with slotted controls 1`] = `
<ic-dialog heading="Dialog heading" open="">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon-tertiary" exportparts="button">
          <template shadowrootmode="open">
            <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-60" label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-60">
              <button aria-describedby="ic-tooltip-ic-button-with-tooltip-60" aria-label="Dismiss" class="button" part="button" tabindex="0" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </template>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <slot name="dialog-controls"></slot>
      </div>
    </dialog>
  </template>
  <ic-button class="ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button" onclick="alert('Confirmed!')" slot="dialog-controls" variant="primary">
    <template shadowrootmode="open">
      <button class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </template>
    Confirm
  </ic-button>
</ic-dialog>
`;

exports[`ic-dialog component should render with the close button 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog with close button test">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog with close button test
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon-tertiary" exportparts="button">
          <template shadowrootmode="open">
            <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-132" label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-132">
              <button aria-describedby="ic-tooltip-ic-button-with-tooltip-132" aria-label="Dismiss" class="button" part="button" tabindex="0" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </template>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
          <template shadowrootmode="open">
            <button class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </template>
          Cancel
        </ic-button>
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button">
          <template shadowrootmode="open">
            <button class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </template>
          Confirm
        </ic-button>
      </div>
    </dialog>
  </template>
</ic-dialog>
`;

exports[`ic-dialog component should render with two default buttons 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog heading">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog heading
              </ic-typography>
            </slot>
          </div>
        </div>
        <ic-button class="close-icon ic-button-size-medium ic-button-variant-icon-tertiary" exportparts="button">
          <template shadowrootmode="open">
            <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-16" label="Dismiss" placement="bottom" silent="" target="ic-button-with-tooltip-16">
              <button aria-describedby="ic-tooltip-ic-button-with-tooltip-16" aria-label="Dismiss" class="button" part="button" tabindex="0" type="button">
                <slot></slot>
              </button>
            </ic-tooltip>
          </template>
          svg
        </ic-button>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
          <template shadowrootmode="open">
            <button class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </template>
          Cancel
        </ic-button>
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button">
          <template shadowrootmode="open">
            <button class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </template>
          Confirm
        </ic-button>
      </div>
    </dialog>
  </template>
</ic-dialog>
`;

exports[`ic-dialog component should render without the close button 1`] = `
<ic-dialog class="ic-dialog-hidden" heading="Dialog hide close button test" hide-close-button="true">
  <template shadowrootmode="open">
    <dialog aria-describedby="dialog-alert dialog-content" aria-labelledby="dialog-label dialog-heading" class="dialog small">
      <div class="heading-area">
        <div class="heading-content">
          <div class="label">
            <slot name="label">
              <ic-typography id="dialog-label" variant="label"></ic-typography>
            </slot>
          </div>
          <div class="heading">
            <slot name="heading">
              <ic-typography id="dialog-heading" variant="h4">
                Dialog hide close button test
              </ic-typography>
            </slot>
          </div>
        </div>
      </div>
      <div class="content-area">
        <div id="dialog-content">
          <slot></slot>
        </div>
      </div>
      <div class="dialog-controls">
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-tertiary" exportparts="button">
          <template shadowrootmode="open">
            <button class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </template>
          Cancel
        </ic-button>
        <ic-button class="dialog-control-button ic-button-size-medium ic-button-variant-primary" data-gets-focus exportparts="button">
          <template shadowrootmode="open">
            <button class="button" part="button" tabindex="0" type="button">
              <slot></slot>
            </button>
          </template>
          Confirm
        </ic-button>
      </div>
    </dialog>
  </template>
</ic-dialog>
`;
